WC3LIB_ENABLE_EXCEPTIONS()

set(wc3lib_MDLX_SRC                            
	ambientcolor.cpp
	ambientcolors.cpp
	ambientintensities.cpp
	ambientintensity.cpp
	attachment.cpp
	attachments.cpp
	attachmentvisibility.cpp
	attachmentvisibilities.cpp
	bone.cpp
	bones.cpp
	camera.cpp
	camerarotationlength.cpp
	camerarotationlengths.cpp
	cameras.cpp
	collisionshape.cpp
	collisionshapes.cpp
	emissionrate.cpp
	emissionrates.cpp
	event.cpp
	events.cpp
	eventtrack.cpp
	eventtracks.cpp
	ganimation.cpp
	geoset.cpp
	geosetanimation.cpp
	geosetanimationalpha.cpp
	geosetanimationalphas.cpp
	geosetanimationcolor.cpp
	geosetanimationcolors.cpp
	geosetanimations.cpp
	geosets.cpp
	globalsequence.cpp
	globalsequences.cpp
	groupmdxblock.cpp
	groupmdxblockmember.cpp
	groupvertex.cpp
	groupvertices.cpp
	helper.cpp
	helpers.cpp
	intensities.cpp
	intensity.cpp
	layer.cpp
	layers.cpp
	lengths.cpp
	light.cpp
	lightambientcolor.cpp
	lightambientcolors.cpp
	lights.cpp
	material.cpp
	materialalpha.cpp
	materialalphas.cpp
	materials.cpp
	matrices.cpp
	matrix.cpp
	matrixgroupcount.cpp
	matrixgroupcounts.cpp
	mdlx.cpp
	mdxalpha.cpp
	mdxalphas.cpp
	mdxblock.cpp
	mdxscaling.cpp
	mdxscalings.cpp
	model.cpp
	normal.cpp
	normals.cpp
	object.cpp
	ogremdlx.cpp
	particleemitter2.cpp
	particleemitter2latitude.cpp
	particleemitter2latitudes.cpp
	particleemitter2s.cpp
	particleemitter2speed.cpp
	particleemitter2speeds.cpp
	particleemitter2width.cpp
	particleemitter2widths.cpp
	particleemitter.cpp
	particleemitters.cpp
	pivotpoint.cpp
	pivotpoints.cpp
	primitivesize.cpp
	primitivesizes.cpp
	primitivetype.cpp
	primitivetypes.cpp
	primitivevertex.cpp
	primitivevertices.cpp
	ribbonemitter.cpp
	ribbonemitters.cpp
	ribbonemitterheightabove.cpp
	ribbonemitterheightsabove.cpp
	ribbonemitterheightbelow.cpp
	ribbonemitterheightsbelow.cpp
	ribbonemittervisibility.cpp
	ribbonemittervisibilities.cpp
	rotation0.cpp
	rotation0s.cpp
	rotation1.cpp
	rotation1s.cpp
	scaling0.cpp
	scaling0s.cpp
	scaling1.cpp
	scaling1s.cpp
	segmentcolor.cpp
	sequence.cpp
	sequences.cpp
	texture.cpp
	textureanimation.cpp
	textureanimations.cpp
	textureid.cpp
	textureids.cpp
	textures.cpp
	texturepatch.cpp
	texturepatches.cpp
	texturevertex.cpp
	texturevertices.cpp
	translation0.cpp
	translation0s.cpp
	translation1.cpp
	translation1s.cpp
	translation2.cpp
	translation2s.cpp
	translation3.cpp
	translation3s.cpp
	version.cpp
	vertex.cpp
	vertices.cpp
	visibility1.cpp
	visibility1s.cpp
	visibility2.cpp
	visibility2s.cpp
	visibility3.cpp
	visibility3s.cpp
)

set(wc3lib_MDLX_H
	attachment.hpp
	ambientcolor.hpp
	ambientcolors.hpp
	ambientintensity.hpp
	ambientintensities.hpp
	bone.hpp
	camera.hpp
	camerarotationlength.hpp
	camerarotationlengths.hpp
	cameras.hpp
	collisionshape.hpp
	event.hpp
	events.hpp
	eventtrack.hpp
	eventtracks.hpp
	ganimation.hpp
	geoset.hpp
	geosetanimation.hpp
	geosetanimationalpha.hpp
	geosetanimationalphas.hpp
	geosetanimationcolor.hpp
	geosetanimationcolors.hpp
	groupmdxblock.hpp
	groupmdxblockmember.hpp
	materialalpha.hpp
	materialalphas.hpp
	mdlx.hpp
	mdxalpha.cpp
	mdxalphas.cpp
	mdxscaling.cpp
	mdxscalings.cpp
	object.hpp
	ogremdlx.hpp
	particleemitter2.hpp
	particleemitter2latitude.hpp
	particleemitter2latitudes.hpp
	particleemitter2s.hpp
	particleemitter2speed.hpp
	particleemitter2speeds.hpp
	particleemitter2width.hpp
	particleemitter2widths.hpp
	particleemitter.hpp
	particleemitters.hpp
	ribbonemitterheightabove.hpp
	ribbonemitterheightsabove.hpp
	ribbonemitterheightbelow.hpp
	ribbonemitterheightsbelow.hpp
	ribbonemittervisibility.hpp
	ribbonemittervisibilities.hpp
	visibility1.hpp
	visibility1s.hpp
	visibility2.hpp
	visibility2s.hpp
	visibility3.hpp
	visibility3s.hpp
)

# todo only if -DBLEND is set
#if (BLEND)
	add_subdirectory(readblend)
#endif (BLEND)

add_library(wc3libmdlx SHARED ${wc3lib_MDLX_SRC})
target_link_libraries(wc3libmdlx ${GETTEXT_LIBRARIES} ${Boost_LIBRARIES})
# todo only if -DBLEND is set
#if (BLEND)
	target_link_libraries(wc3libmdlx wc3libmdlxreadblend)
#endif (BLEND)

#install

install(TARGETS wc3libmdlx DESTINATION lib/wc3lib/)
install(FILES ${wc3lib_MDLX_H} PUBLIC_HEADER DESTINATION include/wc3lib/mdlx)