WC3LIB_ENABLE_EXCEPTIONS()

WC3LIB_GET_H(wc3lib_LIB_SFMPQAPI_LINUX_H)
WC3LIB_GET_SRC(wc3lib_LIB_SFMPQAPI_LINUX_SRC)
set(wc3lib_LIB_SFMPQAPI_LINUX_SRC ${wc3lib_LIB_SFMPQAPI_LINUX_SRC} PARENT_SCOPE)

# install

install(FILES ${wc3lib_LIB_SFMPQAPI_LINUX_H} PUBLIC_HEADER DESTINATION include/wc3lib/lib/SFmpqapi/linux)